--- a/Product/product_dashboard.html
+++ b/Product/product_dashboard.html
@@ -642,7 +642,6 @@
     "November 2025": "https://docs.google.com/spreadsheets/d/e/2PACX-1vT7ZVd1O2MMZPQ-eNdmAdfyzuTXLa-KOMwxFibhN0c5nBm1TywXnsyElaKeifVZHH3HOnTL8xZkiHlJ/pub?gid=1772695434&single=true&output=csv",
     "December 2025": "https://docs.google.com/spreadsheets/d/e/2PACX-1vS6iyMOviuAKEPtY-l7IOcbpkpWIm6hHVz5ongtl9A6xv2idj2VqJ5shpPcteJ-QAMsdQvMgYUpaQec/pub?gid=1772695434&single=true&output=csv",
     "January 2026": "https://docs.google.com/spreadsheets/d/e/2PACX-1vRT8Kama3jzM7pEBPHUY-hUKgiV5Mbp0VC5CN4_-r2MckRoU2xxGcwQb31qeRKjXLg2NHH0eDQlmu3C/pub?gid=1772695434&single=true&output=csv",
-    "February 2026": "https://docs.google.com/spreadsheets/d/e/2PACX-1vRWCk42WV4zp0FBWtNJmxIsFW88QPRxE-2S8cnKG205VfA9ntl_2xMhrTyuRPWS82kDtaszDFDyv7r5/pub?gid=1772695434&single=true&output=csv",
   };
 
   // ============================================================================
@@ -1159,11 +1158,8 @@
     const targetDataset = ['DX','UX','VP'].map(p => MONTHLY_TARGETS[p]);
     const actualDataset = ['DX','UX','VP'].map(p => productSales[p]);
 
-    // Colour each bar based on % achieved
-    const barColors = ['DX','UX','VP'].map(p => {
-      const pct = productSales[p]/MONTHLY_TARGETS[p]*100;
-      return pct >= 90 ? '#10b981' : pct >= 70 ? '#f59e0b' : '#ef4444';
-    });
+    // Use product brand colors: DX = black, UX = green, VP = red
+    const barColors = ['DX','UX','VP'].map(p => PRODUCT_COLORS[p]);
 
     charts.targetVsActual = new Chart(document.getElementById('targetVsActualChart').getContext('2d'), {
       type: 'bar',
